Save STM32 ioc config

--- a/Firmware/ChargerSTM32.ioc
+++ b/Firmware/ChargerSTM32.ioc
@@ -7,13 +7,13 @@ ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_12
 ADC2.CommonPathInternal=null|null|null|null
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
 ADC2.NbrOfConversionFlag=1
-ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-1\#ChannelRegularConversion=1
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -34,6 +34,7 @@ Mcu.CPN=STM32G473RET6
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
+Mcu.IP10=TIM2
 Mcu.IP2=FDCAN1
 Mcu.IP3=FDCAN3
 Mcu.IP4=FREERTOS
@@ -42,7 +43,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SPI2
 Mcu.IP8=SPI3
 Mcu.IP9=SYS
-Mcu.IPNb=10
+Mcu.IPNb=11
 Mcu.Name=STM32G473R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PF0-OSC_IN
@@ -67,14 +68,16 @@ Mcu.Pin25=PB4
 Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin27=VP_SYS_VS_tim6
 Mcu.Pin28=VP_SYS_VS_DBSignals
+Mcu.Pin29=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PC0
+Mcu.Pin30=VP_TIM2_VS_no_output1
 Mcu.Pin4=PC1
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=29
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G473RETx
@@ -136,6 +139,7 @@ PB14.Signal=SPI2_MISO
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
+PB2.Locked=true
 PB2.Mode=IN12-Single-Ended
 PB2.Signal=ADC2_IN12
 PB3.Locked=true
@@ -269,11 +273,19 @@ SPI3.IPParameters=VirtualType,Mode,Direction,VirtualNSS,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualNSS=VM_NSSHARD
 SPI3.VirtualType=VM_MASTER
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 No Output,AutoReloadPreload,PeriodNoDither
+TIM2.PeriodNoDither=65536
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_no_output1.Mode=PWM Generation1 No Output
+VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
 board=custom
 rtos.0.ip=FREERTOS
