--- a/Firmware/ChargerSTM32.ioc
+++ b/Firmware/ChargerSTM32.ioc
@@ -143,11 +143,8 @@ PB3.Mode=FDCAN_Activate
 PB3.Signal=FDCAN3_RX
 PB4.Mode=FDCAN_Activate
 PB4.Signal=FDCAN3_TX
-PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=ADC1_IN7
 PC0.Locked=true
-PC0.Mode=IN6-Single-Ended
-PC0.Signal=ADC1_IN6
+PC0.Signal=GPIO_Output
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=ADC1_IN6
 PC1.Locked=true
